# llq-82

./: README.md
hardware/KeyBoard/: 2mm盖板.PcbDoc  3mm磨砂.PcbDoc  KeyBoard.PrjPcb  KeyBoard.PrjPcbStructure  keyboard.SchDoc  叠层.PcbDoc  叠层2.PcbDoc  夹心棉.PcbDoc  定位板.PcbDoc  定位板v2.PcbDoc  定位铝基板.PcbDoc  底板.PcbDoc  底板4mm.PcbDoc  底棉.PcbDoc  电池盖3mm.PcbDoc
hardware/KeyBoard Core/keyboard_main/: keyboard_main.OutJob
hardware/KeyBoard Core/keyboard_main-v2/: keyboard_main.OutJob  keyboard_main.PrjPcb  keyboard_main.SchDoc
hardware/KeyBoard Core/keyboard_main-v8/: keyboard_main.OutJob
hardware/KeyBoard Core/keyboard_main-v9/: keyboard_main.PrjPcb  keyboard_main.SchDoc
hardware/KeyBoard/__Previews/: keyboard.SchDocPreview
hardware/KeyBoard_Core/keyboard_main/: dxf.PcbDoc  keyboard_main.PrjPcb  (+1 more)
hardware/KeyBoard_Core/keyboard_main-v8/: keyboard_main.PrjPcb  keyboard_main.SchDoc
hardware/KeyBoard_Core/keyboard_main-v9/: dxf.PcbDoc  keyboard_main.OutJob  keyboard_main.PrjPcb  keyboard_main.PrjPcbStructure  keyboard_main.SchDoc  keyboard_main.xlsx
hardware/KeyBoard_Device/: KEY.SchDoc  KeyBoard.OutJob  KeyBoard.PrjPcb  KeyBoard.PrjPcbStructure  KeyBoard.xlsx  keyboard.SchDoc
image/LLQ-82/: LLQ-82.psd  llq.c
software/llq-82-esp32/: README.html  README.md  sdkconfig
software/llq-82-esp32/main/: CMakeLists.txt  ble_hidd_demo_main.c  bsp_uart.c  bsp_uart.h
software/llq-82-stm32/: .mxproject  Cube_MX.ioc
software/llq-82-stm32-v2/: readme.md
布局/: 定位板.dxf  定位板2.dxf
设计/硬件设计/: 硬件框图.xmind  硬件设计框图.drawio
设计/软件设计/: keyboard.drawio  keyboard.xmind  软件设计.xmind
(+214 files in other folders)
